--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.5.1",
+    "node-mocks-http": "^1.17.2",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
-    "supertest": "^7.1.0",
+    "sequelize-test-helpers": "^1.4.3",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.3.2"
   },
   "lint-staged": {
