--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -33,9 +34,11 @@
     "jwks-rsa": "^3.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
+    "node-mocks-http": "^1.17.2",
     "pg": "^8.15.6",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "sequelize-test-helpers": "^1.4.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.27.1",
@@ -52,7 +55,7 @@
     "lint-staged": "^15.5.1",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
-    "supertest": "^7.1.0",
+    "supertest": "^7.1.1",
     "ts-jest": "^29.3.2"
   },
   "lint-staged": {
