--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-mocks-http": "^1.17.2",
-    "pg": "^8.15.6",
+    "pg": "^8.16.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
     "sequelize-test-helpers": "^1.4.3"
