--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "eslint-plugin-jest": "^28.11.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
@@ -35,8 +36,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-mocks-http": "^1.17.2",
-    "pg": "^8.16.0",
-    "pg-hstore": "^2.3.4",
+    "pdfkit": "^0.17.1",
+    "pg": "^8.15.6",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
     "sequelize-test-helpers": "^1.4.3"
